[gd_scene load_steps=2 format=3 uid="uid://7fxhjsr05gkq"]

[ext_resource type="Script" path="res://menu/Registration.gd" id="1_35dbs"]

[node name="Registration" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 361.0
offset_bottom = 180.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Registration" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35dbs")

[node name="NamelLbl" type="RichTextLabel" parent="Control/Registration"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 178.0
offset_bottom = 42.0
text = "Name:"

[node name="EmailLbl" type="RichTextLabel" parent="Control/Registration"]
layout_mode = 0
offset_left = 19.0
offset_top = 54.0
offset_right = 179.0
offset_bottom = 81.0
text = "Email:"

[node name="PassLbl" type="RichTextLabel" parent="Control/Registration"]
layout_mode = 0
offset_left = 21.0
offset_top = 92.0
offset_right = 108.0
offset_bottom = 119.0
text = "Password:"

[node name="NameTxt" type="LineEdit" parent="Control/Registration"]
layout_mode = 0
offset_left = 107.0
offset_top = 13.0
offset_right = 348.0
offset_bottom = 44.0

[node name="EmailTxt" type="LineEdit" parent="Control/Registration"]
layout_mode = 0
offset_left = 106.0
offset_top = 53.0
offset_right = 347.0
offset_bottom = 84.0

[node name="PassTxt" type="LineEdit" parent="Control/Registration"]
layout_mode = 0
offset_left = 107.0
offset_top = 91.0
offset_right = 348.0
offset_bottom = 122.0

[node name="RegisterBtn" type="Button" parent="Control/Registration"]
layout_mode = 0
offset_left = 145.0
offset_top = 144.0
offset_right = 217.0
offset_bottom = 175.0
text = "Register
"

[node name="ErrorLbl" type="RichTextLabel" parent="Control/Registration"]
layout_mode = 0
offset_left = 19.0
offset_top = 119.0
offset_right = 353.0
offset_bottom = 149.0

[connection signal="button_down" from="Control/Registration/RegisterBtn" to="Control/Registration" method="_on_register_btn_button_down"]
